Rename output markdown files to README.md.

--- a/src/Geohash.Polyhasher/Geohash.Polyhasher/Geohash.Polyhasher.csproj
+++ b/src/Geohash.Polyhasher/Geohash.Polyhasher/Geohash.Polyhasher.csproj
@@ -21,7 +21,7 @@
 
 	<PropertyGroup>
 		<VsxmdAutoDeleteXml>True</VsxmdAutoDeleteXml>
-		<DocumentationMarkdown>$(MSBuildProjectDirectory)\$(MSBuildProjectName).md</DocumentationMarkdown>
+		<DocumentationMarkdown>$(MSBuildProjectDirectory)\README.md</DocumentationMarkdown>
 	</PropertyGroup>
 
 	<ItemGroup>
