--- a/src/Geohash.Polyhasher/Geohash.Polyhasher.CLI/Geohash.Polyhasher.CLI.csproj
+++ b/src/Geohash.Polyhasher/Geohash.Polyhasher.CLI/Geohash.Polyhasher.CLI.csproj
@@ -27,7 +27,7 @@
 
   <PropertyGroup>
     <VsxmdAutoDeleteXml>True</VsxmdAutoDeleteXml>
-    <DocumentationMarkdown>$(MSBuildProjectDirectory)\$(MSBuildProjectName).md</DocumentationMarkdown>
+    <DocumentationMarkdown>$(MSBuildProjectDirectory)\README.md</DocumentationMarkdown>
   </PropertyGroup>
 
   <ItemGroup>
